--- a/requirements.txt
+++ b/requirements.txt
@@ -1,115 +1,214 @@
+aiohappyeyeballs==2.4.3
+aiohttp==3.11.8
+aiosignal==1.3.1
 annotated-types==0.7.0
-anyio==4.9.0
-asgiref==3.8.1
+anyio==3.6.2
+appnope==0.1.3
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+arrow==1.2.3
+asgiref==3.5.2
+asttokens==2.2.1
+async-timeout==4.0.3
 attrs==25.3.0
+backcall==0.2.0
 backoff==2.2.1
 bcrypt==4.3.0
+beautifulsoup4==4.11.1
+bleach==5.0.1
 build==1.2.2.post1
 cachetools==5.5.2
-certifi==2025.4.26
-charset-normalizer==3.4.2
-chromadb==1.0.8
-click==8.1.8
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.4.0
+chroma-hnswlib==0.7.6
+chromadb==1.0.5
+click==8.1.3
 coloredlogs==15.0.1
+comm==0.1.2
+contourpy==1.0.7
+cycler==0.11.0
+dataclasses-json==0.6.7
+debugpy==1.6.4
+decorator==5.1.1
+defusedxml==0.7.1
 Deprecated==1.2.18
+distlib==0.3.6
 distro==1.9.0
-Django==5.2.1
-djangorestframework==3.16.0
-djangorestframework_simplejwt==5.5.0
+Django==4.1.2
 durationpy==0.9
-exceptiongroup==1.2.2
+entrypoints==0.4
+executing==1.2.0
 fastapi==0.115.9
-filelock==3.18.0
+fastjsonschema==2.16.2
+filelock==3.8.0
+Flask==2.2.3
 flatbuffers==25.2.10
+fonttools==4.39.3
+fqdn==1.5.1
+frozenlist==1.5.0
 fsspec==2025.3.2
-google-auth==2.40.1
+future==0.18.2
+google-auth==2.39.0
 googleapis-common-protos==1.70.0
 grpcio==1.71.0
-h11==0.16.0
-hf-xet==1.1.0
-httpcore==1.0.9
+h11==0.14.0
+httpcore==1.0.7
 httptools==0.6.4
-httpx==0.28.1
-huggingface-hub==0.31.1
+httpx==0.28.0
+httpx-sse==0.4.0
+huggingface-hub==0.30.2
 humanfriendly==10.0
-idna==3.10
+idna==3.4
 importlib_metadata==8.6.1
 importlib_resources==6.5.2
-Jinja2==3.1.6
-jiter==0.9.0
-joblib==1.5.0
+ipykernel==6.19.2
+ipython==8.7.0
+ipython-genutils==0.2.0
+isoduration==20.11.0
+itsdangerous==2.1.2
+jedi==0.18.2
+Jinja2==3.1.2
+jiter==0.8.0
+joblib==1.2.0
+jsonpatch==1.33
+jsonpointer==2.3
 jsonschema==4.23.0
-jsonschema-specifications==2025.4.1
+jsonschema-specifications==2024.10.1
+jupyter-events==0.5.0
+jupyter_client==7.4.8
+jupyter_core==5.1.0
+jupyter_server==2.0.1
+jupyter_server_terminals==0.4.2
+jupyterlab-pygments==0.2.2
+kiwisolver==1.4.4
 kubernetes==32.0.1
+langchain==0.3.9
+langchain-community==0.3.8
+langchain-core==0.3.21
+langchain-openai==0.2.10
+langchain-text-splitters==0.3.2
+langsmith==0.1.147
 markdown-it-py==3.0.0
-MarkupSafe==3.0.2
+MarkupSafe==2.1.1
+marshmallow==3.23.1
+matplotlib==3.7.1
+matplotlib-inline==0.1.6
 mdurl==0.1.2
+mistune==2.0.4
 mmh3==5.1.0
+monotonic==1.6
 mpmath==1.3.0
-networkx==3.4.2
-numpy==2.2.5
+multidict==6.1.0
+mypy-extensions==1.0.0
+nbclassic==0.4.8
+nbclient==0.7.2
+nbconvert==7.2.6
+nbformat==5.7.0
+nest-asyncio==1.5.6
+notebook==6.5.2
+notebook_shim==0.2.2
+numpy==1.23.5
 oauthlib==3.2.2
-onnxruntime==1.22.0
-openai==1.78.1
-opentelemetry-api==1.33.0
-opentelemetry-exporter-otlp-proto-common==1.33.0
-opentelemetry-exporter-otlp-proto-grpc==1.33.0
-opentelemetry-instrumentation==0.54b0
-opentelemetry-instrumentation-asgi==0.54b0
-opentelemetry-instrumentation-fastapi==0.54b0
-opentelemetry-proto==1.33.0
-opentelemetry-sdk==1.33.0
-opentelemetry-semantic-conventions==0.54b0
-opentelemetry-util-http==0.54b0
-orjson==3.10.18
+onnxruntime==1.21.1
+openai==1.55.3
+opentelemetry-api==1.32.1
+opentelemetry-exporter-otlp-proto-common==1.32.1
+opentelemetry-exporter-otlp-proto-grpc==1.32.1
+opentelemetry-instrumentation==0.53b1
+opentelemetry-instrumentation-asgi==0.53b1
+opentelemetry-instrumentation-fastapi==0.53b1
+opentelemetry-proto==1.32.1
+opentelemetry-sdk==1.32.1
+opentelemetry-semantic-conventions==0.53b1
+opentelemetry-util-http==0.53b1
+orjson==3.10.12
 overrides==7.7.0
-packaging==25.0
-pillow==11.2.1
-posthog==4.0.1
+packaging==24.2
+pandas==1.5.2
+pandocfilters==1.5.0
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.4.0
+pipenv==2022.11.30
+platformdirs==2.5.2
+posthog==3.25.0
+prometheus-client==0.15.0
+prompt-toolkit==3.0.36
+propcache==0.2.0
 protobuf==5.29.4
+psutil==5.9.4
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
-pydantic==2.11.4
-pydantic_core==2.33.2
-Pygments==2.19.1
-PyJWT==2.9.0
+pycparser==2.21
+pydantic==2.10.2
+pydantic-settings==2.6.1
+pydantic_core==2.27.1
+Pygments==2.13.0
+pyparsing==3.0.9
 PyPika==0.48.9
 pyproject_hooks==1.2.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.0
-PyYAML==6.0.2
+pyrsistent==0.19.2
+python-dateutil==2.8.2
+python-dotenv==1.0.1
+python-json-logger==2.0.4
+pytz==2022.6
+PyYAML==6.0
+pyzmq==24.0.1
 referencing==0.36.2
 regex==2024.11.6
+reportlab==3.6.12
 requests==2.32.3
 requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
 rich==14.0.0
 rpds-py==0.24.0
 rsa==4.9.1
-safetensors==0.5.3
-scikit-learn==1.6.1
-scipy==1.15.3
-sentence-transformers==4.1.0
+scikit-learn==1.2.0
+scipy==1.9.3
+seaborn==0.12.2
+Send2Trash==1.8.0
 shellingham==1.5.4
-six==1.17.0
-sniffio==1.3.1
-sqlparse==0.5.3
+six==1.16.0
+sniffio==1.3.0
+soupsieve==2.3.2.post1
+SQLAlchemy==2.0.35
+sqlparse==0.4.3
+stack-data==0.6.2
 starlette==0.45.3
-sympy==1.14.0
-tenacity==9.1.2
-threadpoolctl==3.6.0
+sympy==1.13.3
+tenacity==9.0.0
+terminado==0.17.1
+threadpoolctl==3.1.0
+tiktoken==0.8.0
+tinycss2==1.2.1
 tokenizers==0.21.1
 tomli==2.2.1
-torch==2.7.0
-tqdm==4.67.1
-transformers==4.51.3
-typer==0.15.3
-typing-inspection==0.4.0
-typing_extensions==4.13.2
-urllib3==2.4.0
+tornado==6.2
+tqdm==4.65.0
+traitlets==5.7.1
+typer==0.15.2
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+uri-template==1.2.0
+urllib3==2.2.3
 uvicorn==0.34.2
 uvloop==0.21.0
+virtualenv==20.16.4
+virtualenv-clone==0.5.7
 watchfiles==1.0.5
-websocket-client==1.8.0
+wcwidth==0.2.5
+webcolors==1.12
+webencodings==0.5.1
+websocket-client==1.4.2
 websockets==15.0.1
+Werkzeug==2.2.3
 wrapt==1.17.2
+xgboost==1.7.5
+yarl==1.18.0
 zipp==3.21.0
